<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etUpdateName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etUpdateQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_quantity"
                android:inputType="number" />

            <EditText
                android:id="@+id/etUpdatePrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text_price"
                android:inputType="number" />

        </LinearLayout>

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:text="@string/button_title_update" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50sp"
            android:textColor="@color/red"
            android:text="@string/button_title_delete" />
    </LinearLayout>

</layout>